alteraçao no titulo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <body> <!--corpo do site - tudo que aparece na tela deve estar aqui dentro-->
-    <h1>Sobre a Barbearia Alura </h1> <!--classe para títulos, vai de Hl a H6 onde hl é maior e h6 é o menor-->
+    <h1>fitville </h1> <!--classe para títulos, vai de Hl a H6 onde hl é maior e h6 é o menor-->
 
     <p>Localizada no coração da cidade<b> a Barbearia Alura</b> traz para o mercado o que há de
     melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque
