--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque
     na cidade e conquista novos clientes a cada dia.<p>
 
-    <p id="missao"><i>Nossa missão é: <b>"Proporcionar auto-estima e qualidade de vida aos clientes".</b></i></p>
+    <p id="missao"><i>Nossa missão é: <b>"comece a sua melhor versão com a fitville".</b></i></p>
 
     <p id="pcor">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. <i>O
     atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos
