--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 
 <body> <!--corpo do site - tudo que aparece na tela deve estar aqui dentro-->
-    <h1>fitville </h1> <!--classe para títulos, vai de Hl a H6 onde hl é maior e h6 é o menor-->
+    <h1>FitVille </h1> <!--classe para títulos, vai de Hl a H6 onde hl é maior e h6 é o menor-->
 
     <p>Localizada no coração da cidade<b> a Barbearia Alura</b> traz para o mercado o que há de
     melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque
     na cidade e conquista novos clientes a cada dia.<p>
 
-    <p id="missao"><i>Nossa missão é: <b>"comece a sua melhor versão com a fitville".</b></i></p>
+    <p id="missao"><i><b>"Comece a sua melhor versão com a fitville".</b></i></p>
 
     <p id="pcor">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. <i>O
     atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos
