alterçao no texto

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <body> <!--corpo do site - tudo que aparece na tela deve estar aqui dentro-->
     <h1>FitVille </h1> <!--classe para títulos, vai de Hl a H6 onde hl é maior e h6 é o menor-->
 
-    <p>Localizada no coração da cidade<b> a Barbearia Alura</b> traz para o mercado o que há de
-    melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque
-    na cidade e conquista novos clientes a cada dia.<p>
+    <p>Se você quer economizar na compra dos seus <b> suplementos </b> , a FitVille é o lugar certo.Ao comprar á vista pelo site, você já garante 10% de desconto <p>
 
     <p id="missao"><i><b>"Comece a sua melhor versão com a fitville".</b></i></p>
 
