alteraçao do texto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <p>Se você quer economizar na compra dos seus <b> suplementos </b> , a FitVille é o lugar certo.Ao comprar á vista pelo site, você já garante 10% de desconto <p>
 
-    <p id="missao"><i><b>"Comece a sua melhor versão com a fitville".</b></i></p>
+    <p id="missao"><i><b>"Comece a sua melhor versão com a FitVille".</b></i></p>
 
     <p id="pcor">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. <i>O
     atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos
