--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 
     <p id="missao"><i><b>"Comece a sua melhor versão com a FitVille".</b></i></p>
 
-    <p id="pcor">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. <i>O
-    atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos
-    nossos clientes.
+    <p id="pcor".
         </i></P>
     </body>
 </html>
