alteraçao no titulo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> <!--passa as informações para o navegador-->
  <html lang="pt-br"> <!--informa a linguagem original do site-->
  <meta charset="UTF8"> <!--dicionario de linguagem-->
- <title>Barberia Alura</title> <!--nome na aba do navegador-->
+ <title>FitVille</title> <!--nome na aba do navegador-->
 <link rel="stylesheet" href="style.css"> <!--link para folha de estilo css-->
 
 </head> <!--fim da cabeça do site-->
