--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head> <!--fim da cabeça do site-->
 
 <header>
-    <img id="banner" src="whey2.jpg">
+    <img id="banner" src="whey2.jpeg">
 </header>
 
 
