--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
  <html lang="pt-br"> <!--informa a linguagem original do site-->
  <meta charset="UTF8"> <!--dicionario de linguagem-->
  <title>FitVille</title> <!--nome na aba do navegador-->
-<link rel="stylesheet" href="style.css"> <!--link para folha de estilo css-->
+<link rel="stylesheet" href="./css/style.css"> 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkalami&display=swap" rel="stylesheet"> <link-->
 
 </head> <!--fim da cabeça do site-->
 
 <header>
-    <img id="banner" src="whey2.png">
+    <img id="banner" src="./images/whey2.png">
 </header>
 
 
 <body> <!--corpo do site - tudo que aparece na tela deve estar aqui dentro-->
-    <h1>FitVille </h1> <!--classe para títulos, vai de Hl a H6 onde hl é maior e h6 é o menor-->
-
+    <h1> FitVille </h1> <!--classe para títulos, vai de Hl a H6 onde hl é maior e h6 é o menor-->
+    
     <p>Se você quer economizar na compra dos seus <b> suplementos </b> , a FitVille é o lugar certo.Ao comprar á vista pelo site, você já garante 10% de desconto <p>
 
     <p id="missao"><i><b>"Comece a sua melhor versão com a FitVille".</b></i></p>
